--- a/index.html
+++ b/index.html
@@ -276,7 +276,10 @@
 
             In Chinese, Manyu is written as 曼玉 (màn yù)—meaning “graceful jade.” 
             The Mandarin pronunciation màn yù sounds like "Manwu", aligning with the $Manwu.
+            <br><br>
+            <img src="/Manyu_banner.jpg" style="width: 100%; height: auto; border-radius: 10px; margin-top: 20px;" alt="" />
           </p>
+
         </div>
       </div>
       
