--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <div class="main-container container">
       <div class="mission_row">
         <div class="mission_image_section">
-          <img src="/manyu_logo.png" alt="" height="500" width="500" />
+          <img src="/manyu_logo.png" alt="" style="width: 500px !important; height: auto;" />
         </div>
         <div class="mission_description_section">
           <h2 style="color: white !important;">Chinese Manyu 曼玉 | $Manwu</span></h2>
